--- a/source/sass/mixins/_variables.scss
+++ b/source/sass/mixins/_variables.scss
@@ -18,6 +18,7 @@ $gray-dark: #727272;
 $gray: #a4a4a4;
 $gray-light: #f4f4f4;
 $off-black: #212121;
+$green: #129966;
 
 //== Responsive Breakpoints
 $screen-xs-min: 480px;
