--- a/esl/esl/templates/base.html
+++ b/esl/esl/templates/base.html
@@ -9,8 +9,9 @@
             <title>{% block title %}Eat School Lunch Challenge{% endblock title %}</title>
             <meta name="description" content="Eat School Lunch Challenge">
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+            <link rel="icon" type="image/png" href="{{ STATIC_URL }}images/favicon.png" />
             {% block css %}
-                <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Lora:400,700,700italic' rel='stylesheet' type='text/css'>
+                <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic|Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
                 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             {% endblock css %}
         {% endblock head %}
@@ -21,6 +22,7 @@
         <![endif]-->
         <section class="main-wrapper">
             <header class="global-header">
+                <p class="home-intro">{% trans 'Fill out the 2016-2017 Application' %}</p>
                 <i class="material-icons help">help_outline</i>
                 <p class="steps">
                     {% trans 'Step' %}<span class="current-step"></span>
@@ -29,9 +31,28 @@
                 </p>
             </header>
             {% block content %}{% endblock content %}
+            <div class="help-tooltip">
+                <span class="triangle"></span>
+                <i class="material-icons close">close</i>
+                <p>
+                    {% blocktrans %}
+                        Select the ? for helpful hints and definitions along the way.
+                    {% endblocktrans %}
+                </p>
+            </div>
         </section>
     </body>
     {% block js %}
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-74070397-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/vendor/jquery_finger-0.1.4.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/util/common.js"></script>
