--- a/source/sass/mixins/_buttons.scss
+++ b/source/sass/mixins/_buttons.scss
@@ -8,6 +8,7 @@
     p {
         color: $white;
         font-family: 'Source Sans Pro', sans-serif;
+        font-weight: 300;
         font-size: 2em;
         letter-spacing: 0.125em;
         width: 100%;
