--- a/esl/esl/templates/base.html
+++ b/esl/esl/templates/base.html
@@ -23,6 +23,7 @@
         <section class="main-wrapper">
             <header class="global-header">
                 <p class="home-intro">{% trans 'Fill out the 2016-2017 Application' %}</p>
+                <p class="success-intro">{% trans '2016-2017 Application' %}</p>
                 <i class="material-icons help">help_outline</i>
                 <p class="steps">
                     {% trans 'Step' %}<span class="current-step"></span>
