--- a/source/sass/mixins/_forms.scss
+++ b/source/sass/mixins/_forms.scss
@@ -75,8 +75,12 @@ label {
     }
 }
 
+.dollar-input {
+    letter-spacing: 2px;
+}
+
 input[type=radio], input[type=checkbox] {
-    margin: 0 0.5em;
+    margin: 0.75em 0.5em;
 }
 
 @media (max-width: $screen-xs-min) {
