--- a/source/sass/mixins/_base.scss
+++ b/source/sass/mixins/_base.scss
@@ -65,8 +65,8 @@ a {
         margin: 0.9em 0;
     }
 
-    .home-intro {
-
+    .home-intro, .success-intro {
+        display: none;
     }
 
     .help {
