--- a/source/sass/pages/apply.scss
+++ b/source/sass/pages/apply.scss
@@ -101,7 +101,7 @@
             font-size: 1.2em;
         }
 
-        ul {
+        .helper-list {
             width: 80%;
             margin: 0 auto;
             text-align: left;
