--- a/source/sass/mixins/_base.scss
+++ b/source/sass/mixins/_base.scss
@@ -79,7 +79,7 @@ a {
 
         &:hover {
             cursor: pointer;
-            color: $blue;
+            color: $green-dark;
         }
     }
 
