--- a/source/sass/mixins/_variables.scss
+++ b/source/sass/mixins/_variables.scss
@@ -19,6 +19,7 @@ $gray: #a4a4a4;
 $gray-light: #f4f4f4;
 $off-black: #212121;
 $green: #129966;
+$green-dark: #196246;
 
 //== Responsive Breakpoints
 $screen-xs-min: 480px;
