--- a/source/sass/pages/home.scss
+++ b/source/sass/pages/home.scss
@@ -99,6 +99,12 @@
     }
 }
 
+.contact-help {
+    padding: 4em 0;
+    width: 80%;
+    margin: 0 auto;
+}
+
 @media (max-width: $screen-xs-min) {
 
 }
