--- a/source/sass/pages/apply.scss
+++ b/source/sass/pages/apply.scss
@@ -44,7 +44,7 @@
 
 .step {
     text-align: center;
-    padding: 2em;
+    padding: 2em 1em;
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
@@ -157,6 +157,33 @@
 }
 
 .step-household-adults {
+    .form-set {
+        background-color: $gray-light;
+        position: relative;
+        margin-bottom: 1em;
+        padding: 0.25em 0;
+
+        .delete {
+            position: absolute;
+            display: none;
+            top: 0;
+            right: 0;
+            font-size: 2em;
+            color: $blue-gray;
+
+            &:hover {
+                color: red;
+                cursor: pointer;
+            }
+        }
+
+        &.created {
+            .delete {
+                display: block;
+            }
+        }
+    }
+
     .form-group {
         margin: 0.5em 0;
     }
@@ -202,6 +229,33 @@
 }
 
 .step-household-children {
+    .form-set {
+        background-color: $gray-light;
+        position: relative;
+        margin-bottom: 1em;
+        padding: 0.25em 0;
+
+        .delete {
+            position: absolute;
+            display: none;
+            top: 0;
+            right: 0;
+            font-size: 2em;
+            color: $blue-gray;
+
+            &:hover {
+                color: red;
+                cursor: pointer;
+            }
+        }
+
+        &.created {
+            .delete {
+                display: block;
+            }
+        }
+    }
+
     .form-group {
         margin: 0.5em 0;
     }
